fixing top bar button spacings

--- a/ags/scss/widgets/buttons.scss
+++ b/ags/scss/widgets/buttons.scss
@@ -6,6 +6,7 @@
   padding: 4px 4px 4px 2px;
   border: none;
   min-height: 25px;
+  min-width: 30px;
 }
 
 .primaryButton {
